src/test/resources/purescript_examples/passing/ObjectSynonym.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Inner')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PsiElement(proper name)('Number')
            PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('inner')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeConstructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Inner')
                PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('inner')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(NumericLiteral)
              PsiElement(natural)('0')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('Outer')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(ObjectType)
              PsiElement({)('{')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(Row)
                PsiElement(identifier)('inner')
                PsiElement(whitespace)(' ')
                PsiElement(::)('::')
                PsiElement(whitespace)(' ')
                PureASTWrapperElement(Type)
                  PureASTWrapperElement(TypeAtom)
                    PureASTWrapperElement(TypeConstructor)
                      PureASTWrapperElement(Qualified)
                        PsiElement(proper name)('Inner')
                        PsiElement(whitespace)(' ')
              PsiElement(})('}')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('outer')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeConstructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Outer')
                PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('outer')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(ObjectLiteral)
              PsiElement({)('{')
              PsiElement(whitespace)(' ')
              PureASTWrapperElement(ObjectBinderField)
                PsiElement(identifier)('inner')
                PsiElement(operator)(':')
                PsiElement(whitespace)(' ')
                PureASTWrapperElement(Value)
                  PureASTWrapperElement(PrefixValue)
                    PureASTWrapperElement(Var)
                      PureASTWrapperElement(Qualified)
                        PsiElement(identifier)('inner')
                        PsiElement(whitespace)(' ')
              PsiElement(})('}')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('  \n')
